# payment_service

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
payouts/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
