[project]
name = "payment-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0",
    "django>=5.2.9",
    "djangorestframework>=3.16.1",
    "psycopg>=3.3.1",
    "redis>=7.1.0",
    "drf-spectacular>=0.27.0",
]

